# hdx-scraper-cod-ab-country

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  hatch.toml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff.toml  run.py
.claude/: settings.json
.github/workflows/: publish.yaml  run-python-script.yaml
format-specs/: boundaries.md  metadata.md
scripts/: generate_metadata_feedback.py
src/hdx/scraper/cod_ab/: __main__.py  cod_ab.py  config.py  dataset.py  download.py  utils.py
src/hdx/scraper/cod_ab/checks/: __init__.py  table_names_utils.py  table_pcodes.py
src/hdx/scraper/cod_ab/config/: hdx_dataset_static.yaml
src/hdx/scraper/cod_ab/download/: __init__.py  metadata.py  postprocess.py
src/hdx/scraper/cod_ab/formats/: __init__.py
src/hdx/scraper/cod_ab/metadata/: __init__.py  utils.py
src/hdx/scraper/cod_ab/scores/: __init__.py  output.py
src/hdx/scraper/cod_ab_country/: __init__.py  __main__.py  arcgis.py  config.py  dataset.py  dataset_utils.py  formats.py  utils.py
src/hdx/scraper/cod_ab_country/download/boundaries/: __init__.py  download.py  metadata.py  process.py
src/hdx/scraper/cod_ab_country/download/metadata/: __init__.py  process.py  refactor.py
src/hdx/scraper/cod_ab_country/geodata/: __init__.py  compare.py  formats.py
tests/: __init__.py  conftest.py  test_arcgis.py  test_cod_ab.py  test_dataset_utils.py  test_formats.py  test_geodata_compare.py  test_utils.py
tests/fixtures/caf/: caf_admin0.parquet  caf_admin0points.parquet  caf_admin1.parquet  caf_admin1points.parquet  caf_admin2.parquet  caf_admin2points.parquet  caf_admin3.parquet  caf_admin3points.parquet  caf_admin4.parquet  caf_admin4points.parquet  caf_adminlines.parquet  caf_adminpoints.parquet  caf_checks.csv  caf_cod_ab.xlsx  caf_scores.csv
tests/fixtures/input/: caf_ab_standardized.txt  caf_dynamic_ab_metadata.csv  cod-caf-ab-standardized-featureserver.json  dataset-cod-ab-caf.json  services-hosted.json
