[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "uv-dynamic-versioning"]

[project]
name = "hdx-scraper-cod-ab-country"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "geopandas",
    "hdx-python-api",
    "hdx-python-country",
    "hdx-python-utilities",
    "httpx[http2]",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "quantulum3[classifier]",
    "tenacity",
    "tqdm",
]

[dependency-groups]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff", "taskipy"]

[tool.hatch]
build.targets.wheel.packages = ["src/hdx"]
version.source = "uv-dynamic-versioning"

[tool.taskipy]
# uv run task app
tasks.app = "python run.py"
tasks.test = "pytest --rootdir=. --junitxml=test-results.xml --cov --no-cov-on-fail --cov-report=lcov --cov-report=term-missing"
tasks.ruff = "ruff format && ruff check && ruff format"
